# DSFD-Pytorch-Inference

./: .gitignore  Dockerfile  README.md  benchmark.py  detect.py  pyproject.toml  setup.py  test.py
.github/actions/setup-uv/: action.yml
.github/workflows/: format.yml  ruff.yml  test.yml
dsfd/: __init__.py  detect.py  torch_utils.py  utils.py
face_detection/: __init__.py  api.py  base.py  box_utils.py  build.py  detect.py  face_ssd.py  registry.py  torch_utils.py  utils.py
face_detection/dsfd/: __init__.py  config.py  detect.py  face_ssd.py  utils.py
face_detection/retinaface/: __init__.py  config.py  detect.py  onnx.py  prior_box.py  tensorrt_wrap.py  utils.py
face_detection/retinaface/models/: net.py  retinaface.py
tests/: test_detector.py
weights/: WIDERFace_DSFD_RES152.pth
